--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -2,22 +2,23 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=#, initial-scale=1.0">
-    <title>Success Page</title>
-    <link rel="stylesheet" href="./Reg Form CSS.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=#, initial-scale=1.0">
+	<title>Success Page</title>
+	<link rel="stylesheet" href="./Reg Form CSS.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="container">
-        <form method="POST" action="/registration/register">
-            <div class="header">
-                <h1>You have successfully submitted your details!</h1>
-            </div>
-        </form>
-    </div>
+	<div class="container">
+		<div class="header">
+			<h1>You have successfully submitted your details!</h1>
+		</div>
+		<div class="container">
+			<p><a href="/registration/register">Click here to go back</a></p>
+		</div>
+	</div>
 </body>
 
 </html>
